objects/FCO__c.object
<CustomObject>
    <label>FCO</label>
    <nameField>
        <label>FCO Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FCOs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>PSC__c</fullName>
        <label>PSC</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BMEI</fullName>
                </value>
                <value>
                    <fullName>CMS</fullName>
                </value>
                <value>
                    <fullName>Crawley</fullName>
                </value>
                <value>
                    <fullName>Impac</fullName>
                </value>
                <value>
                    <fullName>Linkoping</fullName>
                </value>
                <value>
                    <fullName>Med Int</fullName>
                </value>
                <value>
                    <fullName>NeuroMag</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>SFM used to generate follow on work orders, activities, RMA&apos;s or output documents.</inlineHelpText>
        <label>SFM</label>
        <referenceTo>SVMXC__ServiceMax_Processes__c</referenceTo>
        <relationshipLabel>FCOs</relationshipLabel>
        <relationshipName>FCOs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Author__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Author</label>
        <referenceTo>User</referenceTo>
        <relationshipName>FCO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>FCOs</relationshipLabel>
        <relationshipName>FCOs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FCO_REF__c</fullName>
        <externalId>true</externalId>
        <label>FCO REF</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>FCO</relationshipLabel>
        <relationshipName>FCO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FCO_Type__c</fullName>
        <label>FCO Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Notification</fullName>
                </value>
                <value>
                    <fullName>Interaction Center Notification</fullName>
                </value>
                <value>
                    <fullName>RMA</fullName>
                </value>
                <value>
                    <fullName>Work Order - Field Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Engineers__c</fullName>
        <label>Engineers</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCO_Parts__c</fullName>
        <label>FCO Parts</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCO_Type2__c</fullName>
        <label>FCO Type</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Major_End__c</fullName>
        <label>Major End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Minor_End__c</fullName>
        <label>Minor End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Custom_End__c</fullName>
        <label>Custom End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FCO_Number__c</fullName>
        <formula>Product__r.ProductCode + &apos;-&apos; + text( month(datevalue(CreatedDate)))+&apos;/&apos;+text(day(datevalue(CreatedDate)))+&apos;/&apos;+text(year(datevalue(CreatedDate)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FCO Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Type__c</fullName>
        <label>Order Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Advanced Exchange</fullName>
                </value>
                <value>
                    <fullName>Call Center Activity</fullName>
                </value>
                <value>
                    <fullName>Exchange</fullName>
                </value>
                <value>
                    <fullName>Onsite Repair</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PSC_Number__c</fullName>
        <formula>CASE( PSC__c , 
&apos;BMEI&apos;, &apos;1&apos;, 
&apos;CMS&apos;, &apos;2&apos;,
&apos;Crawley&apos;, &apos;3&apos;,
&apos;Impac&apos;, &apos;4&apos;,
&apos;Linkoping&apos;, &apos;5&apos;,
&apos;Med Int&apos;, &apos;6&apos;, &apos;7&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PSC Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSC_Status__c</fullName>
        <label>PSC Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Superceded</fullName>
                </value>
                <value>
                    <fullName>Created</fullName>
                </value>
                <value>
                    <fullName>Scoping</fullName>
                </value>
                <value>
                    <fullName>Logistics</fullName>
                </value>
                <value>
                    <fullName>Ready</fullName>
                </value>
                <value>
                    <fullName>Released</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Return_Zip__c</fullName>
        <formula>Return_Location__r.SVMXC__Zip__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Return Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Serial_End__c</fullName>
        <label>Serial End</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Major_Start__c</fullName>
        <label>Major Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Minor_Start__c</fullName>
        <label>Minor Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Return_City__c</fullName>
        <formula>Return_Location__r.SVMXC__City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Return City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Start__c</fullName>
        <label>Custom Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FCO_ManHours__c</fullName>
        <label>FCO ManHours</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_line__c</fullName>
        <label>Product line</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accessory</fullName>
                </value>
                <value>
                    <fullName>Desktop</fullName>
                </value>
                <value>
                    <fullName>Laptop</fullName>
                </value>
                <value>
                    <fullName>Network</fullName>
                </value>
                <value>
                    <fullName>Server</fullName>
                </value>
                <value>
                    <fullName>Solution</fullName>
                </value>
                <value>
                    <fullName>Storage</fullName>
                </value>
                <value>
                    <fullName>Software</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Release_Date__c</fullName>
        <label>Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Return_State__c</fullName>
        <formula>Return_Location__r.SVMXC__State__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Return State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revision_End__c</fullName>
        <label>Revision End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Scan_Storage__c</fullName>
        <label>Scan Storage</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Serial_Start__c</fullName>
        <label>Serial Start</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sibex_FCO_id__c</fullName>
        <externalId>true</externalId>
        <label>Sibex FCO id</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Creation_Date__c</fullName>
        <label>Creation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Return_Street__c</fullName>
        <formula>Return_Location__r.SVMXC__Street__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Return Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calculated_End__c</fullName>
        <label>Calculated End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FCO_Related_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FCO Related To</label>
        <referenceTo>FCO__c</referenceTo>
        <relationshipLabel>FCO (FCO Related To)</relationshipLabel>
        <relationshipName>FCO1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>French_FCO_URL__c</fullName>
        <label>French FCO URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <label>Product Family</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Oncology</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Return_Country__c</fullName>
        <formula>TEXT(Return_Location__r.SVMXC__Country__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Return Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revision_Start__c</fullName>
        <label>Revision Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Completion_Date__c</fullName>
        <label>Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Compliance_Date__c</fullName>
        <label>Compliance Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>English_FCO_URL__c</fullName>
        <label>English FCO URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>FCO_Type_Number__c</fullName>
        <formula>CASE(  FCO_Type__c , 
&apos;Important Field Safety Notice&apos;, &apos;A&apos;, 
&apos;Important Field Safety Modification&apos;, &apos;B&apos;, 
&apos;Important User Notice&apos;, &apos;C&apos;, 
&apos;Important Product Modification&apos;, &apos;D&apos;, 
&apos;Product Bulletin&apos;, &apos;E&apos;, 
&apos;Product Modification&apos;, &apos;F&apos;, 
&apos;Product Recommendation&apos;, &apos;G&apos;, 
&apos;Internal Information Exchange&apos;, &apos;H&apos;, &apos;I&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FCO Type Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Return_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If Depot Repair, location to which customer should ship product.</inlineHelpText>
        <label>Return Location</label>
        <referenceTo>SVMXC__Site__c</referenceTo>
        <relationshipLabel>FCOs</relationshipLabel>
        <relationshipName>FCOs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Search_Criteria__c</fullName>
        <label>Search Criteria</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Spanish_FCO_URL__c</fullName>
        <label>Spanish FCO URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Calculated_Start__c</fullName>
        <label>Calculated Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Distributed_Date__c</fullName>
        <label>Distributed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employer_Product__c</fullName>
        <label>Employer Product</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCO_to_Supercede__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FCO to Supercede</label>
        <referenceTo>FCO__c</referenceTo>
        <relationshipLabel>FCO</relationshipLabel>
        <relationshipName>FCO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Send_To_Customer__c</fullName>
        <label>Send To Customer</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Unit_FCO__c</fullName>
        <label>Business Unit FCO</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scope_Review_Date__c</fullName>
        <label>Scope Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SVMX_PS_FCO_Reason__c</fullName>
        <description>Denotes the reason for the FCO</description>
        <inlineHelpText>Denotes the reason for the FCO</inlineHelpText>
        <label>FCO Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Production Error</fullName>
                </value>
                <value>
                    <fullName>Product out of date</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sibex_FCOAuthor_id__c</fullName>
        <label>Sibex FCOAuthor id</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Compliance_End_Date__c</fullName>
        <label>Compliance End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sibex_FCOProduct_id__c</fullName>
        <label>Sibex FCOProduct id</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_to_Complete_FCO__c</fullName>
        <label>Days to Complete FCO</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Employer_Product_FCO__c</fullName>
        <label>Employer Product FCO</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Compliance_Start_Date__c</fullName>
        <label>Compliance Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Config_Point_Required__c</fullName>
        <label>Config Point Required</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Unit_FCO_Status__c</fullName>
        <label>Business Unit FCO Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Superceded</fullName>
                </value>
                <value>
                    <fullName>Created</fullName>
                </value>
                <value>
                    <fullName>Scoping</fullName>
                </value>
                <value>
                    <fullName>Logistics</fullName>
                </value>
                <value>
                    <fullName>Ready</fullName>
                </value>
                <value>
                    <fullName>Released</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notify_Customer_By_Hours__c</fullName>
        <label>Notify Customer By (Hours)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>48</fullName>
                </value>
                <value>
                    <fullName>72</fullName>
                </value>
                <value>
                    <fullName>96</fullName>
                </value>
                <value>
                    <fullName>108</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Product_FCO_Status__c</fullName>
        <label>Customer Product FCO Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Identified</fullName>
                </value>
                <value>
                    <fullName>Distributed</fullName>
                </value>
                <value>
                    <fullName>Distributed Parts</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description_of_FCO_for_Customer__c</fullName>
        <label>Description of FCO for Customer</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Jims_Really_Imporatant_Checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Shhhhh - secret</inlineHelpText>
        <label>Jims Really Imporatant Checkbox</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>